# Scratch

./: CMakeLists.txt  README.md  main.cpp
Scratch/: CMakeLists.txt
Scratch/include/core/: Block.h
include/core/: Block.h  Context.h  Engine.h  Eval.h  Events.h  Logger.h  MultiRunner.h  Runner.h  Utils.h
include/ui/: Renderer.h  Text.h  UIData.h  UIManager.h  window.h
src/: main.cpp
src/core/: Engine.cpp  Eval.cpp  Events.cpp  Logger.cpp  MultiRunner.cpp  Runner.cpp  Utils.cpp
src/ui/: Renderer.cpp  Text.cpp  UIManager.cpp  window.cpp
